--- a/src/TechJobs/Views/Job/Index.cshtml
+++ b/src/TechJobs/Views/Job/Index.cshtml
@@ -1,9 +1,40 @@
-﻿@{
+﻿@model TechJobs.Models.Job
+
+
+@{
+    //model IEnumerable<TechJobs.Models.Job>
+}
+
+
+@{
 // TODO #2.1- declare the ViewModel (outside of this @{ } block)
 }
 
+
+
 <table class="job-listing">
-    @{ 
-// TODO #2.2 - display the job fields, one per row (outside of this @{ } block)
+    <tr>
+        <th>Name</th>
+        <th>Employer</th>
+        <th>Location</th>
+        <th>CoreCompetency</th>
+        <th>PositioningType</th>
+    </tr>
+
+    <tr>
+        <td>@Model.Name</td>
+        <td>@Model.Employer</td>
+        <td>@Model.Location</td>
+        <td>@Model.CoreCompetency</td>
+        <td>@Model.PositionType</td>
+    </tr>
+
+    
+
+
+
+
+    @{
+        // TODO #2.2 - display the job fields, one per row (outside of this @{ } block)
     }
 </table>
